<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.omicronns.mandelbrot.GenActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editLeftX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/left_x_hint"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editRightX"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/right_x_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editBottomY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/bottom_y_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTopY"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/top_y_hint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonRender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/render_button_text"
        android:onClick="render" />
    
    <com.omicronns.mandelbrot.MandelbrotView
        android:id="@+id/mandelbrotView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
